--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
   "dependencies": {
     "@chakra-ui/react": "^3.16.0",
     "@emotion/react": "^11.14.0",
+    "@uiw/react-codemirror": "^4.23.10",
+    "@wojtekmaj/react-hooks": "^1.22.0",
     "next-themes": "^0.4.6",
-    "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-pdf": "^9.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
@@ -31,6 +32,7 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0",
+    "vite-plugin-static-copy": "^2.3.1",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
