--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@chakra-ui/react": "^3.16.0",
     "@emotion/react": "^11.14.0",
+    "@uiw/codemirror-extensions-langs": "^4.23.12",
     "@uiw/react-codemirror": "^4.23.10",
     "@wojtekmaj/react-hooks": "^1.22.0",
+    "codemirror-json-schema": "^0.8.1",
+    "jsonschema": "^1.5.0",
+    "neo4j-driver": "^5.28.1",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -23,6 +27,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/json-schema": "^7.0.15",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
