Add Graph RAG tab

--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   "dependencies": {
     "@chakra-ui/react": "^3.16.0",
     "@emotion/react": "^11.14.0",
+    "@google/generative-ai": "^0.24.1",
+    "@langchain/community": "^0.3.47",
+    "@langchain/core": "^0.3.60",
+    "@langchain/deepseek": "^0.0.2",
+    "@langchain/openai": "^0.5.14",
     "@uiw/codemirror-extensions-langs": "^4.23.12",
     "@uiw/react-codemirror": "^4.23.10",
     "@wojtekmaj/react-hooks": "^1.22.0",
